code smells fixes